tests/errors/sem_assign2.java
public class sem_assign2 {
public static void main(String[] args){
char value ; value = "HhkOjtJMn";
}
}